[tool.poetry]
name = "doc-test-dda"
version = "0.1.0"
description = ""
authors = ["David <david.acerbo@gmail.com>"]
readme = "README.md"
packages = [{include = "doc_test_dda"}]

[tool.poetry.dependencies]
python = "^3.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
