[tool.poetry]
name = "doc-example-python-code"
version = "0.1.0"
description = ""
authors = ["David Acerbo <david.acerbo@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

